--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>HEJ</p>
+    <p>HEJSAAAAAAAAAAAAAN</p>
+    <button class="onclick">
+        TRYCK NU
+    </button>
 </body>
 </html>
