--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>HEJSAAAAAAAAAAAAAN</p>
-    <button class="onclick">
-        TRYCK NU
+    <script src="script.js" defer></script>
+    <button id="button">
+        knapp
     </button>
 </body>
 </html>
